--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -300,6 +300,7 @@
 
       <div ng-hide="volunteerCtrl.isReadOnly()" class="form-group text-center">
         <button class="btn btn-primary" type="submit" ng-click="volunteerCtrl.updateVolunteer()" name="submit">Update Volunteer</button>
+        <button class="btn btn-danger" type="submit" ng-click="volunteerCtrl.cancelUpdates()" name="cancel">Cancel Changes</button>
       </div>
     </form>
   </div>
