--- a/client/app/slot/slot-detail.html
+++ b/client/app/slot/slot-detail.html
@@ -14,11 +14,12 @@
   <div class="panel panel-default">
     <div class="panel-heading">Volunteers assigned to this time slot:</div>
     <div class="list-group">
-      <a ng-href="/volunteers/{{volunteer._id}}" class="list-group-item" ng-repeat="volunteer in slotCtrl.vols | orderBy: 'lastName'">
-        {{ volunteer.firstName }} {{ volunteer.lastName }}
-      </a>
-      <div class="panel-body" ng-hide="slotCtrl.areThereAssignees()">There are currently no volunteers assigned to this time slot.</div>
+      <div class="list-group-item no-padding" ng-repeat="volunteer in slotCtrl.vols | orderBy: 'lastName'">
+        <a ng-href="/volunteers/{{volunteer._id}}" class="group-item">{{ volunteer.firstName }} {{ volunteer.lastName }}</a>
+        <a ng-click="slotCtrl.removeVolunteer(volunteer)" ng-href="" class="btn btn-sm btn-danger group-item-remove"><span class="glyphicon glyphicon-trash"></span></a>
+      </div>
     </div>
+    <div class="panel-body" ng-hide="slotCtrl.areThereAssignees()">There are currently no volunteers assigned to this time slot.</div>
   </div>
 
   <div class="panel panel-default">
