--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/job/job.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/schedule/schedule.css">
       <link rel="stylesheet" href="app/slot/slot.css">
       <link rel="stylesheet" href="app/upload/upload.css">
       <link rel="stylesheet" href="app/viewer/viewer.css">
@@ -80,7 +81,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/upload/upload.js"></script>
+      <script src="app/upload/upload.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -91,14 +92,16 @@
       <script src="app/job/job.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/schedule/schedule.controller.js"></script>
+      <script src="app/schedule/schedule.js"></script>
       <script src="app/slot/Slot.service.js"></script>
       <script src="app/slot/slot.controller.js"></script>
       <script src="app/slot/slot.js"></script>
       <script src="app/upload/Upload.service.js"></script>
       <script src="app/upload/papaparse.js"></script>
       <script src="app/upload/papaparse.min.js"></script>
-      <script src="app/upload/upload.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/upload/upload.js"></script>
       <script src="app/viewer/viewer.controller.js"></script>
       <script src="app/viewer/viewer.js"></script>
       <script src="app/volunteer/Volunteer.service.js"></script>
