Updating master schedule page with placeholder

--- a/client/app/schedule/schedule.html
+++ b/client/app/schedule/schedule.html
@@ -1,1 +1,7 @@
-<div>This is the schedule view.</div>
+<div class="panel panel-default schedule-container">
+  <div class="panel-heading">Master schedule:
+  </div>
+  <div class="panel-body">
+    There is currently no master schedule.
+  </div>
+</div>
