Changing toggle to enter on job detail

--- a/client/app/job/job-detail.html
+++ b/client/app/job/job-detail.html
@@ -1,7 +1,7 @@
 <div class="job-container">
   <div class="panel panel-default">
     <div class="panel-heading">Job Info:
-      <div class="pull-right"><span ng-show="jobCtrl.isReadOnly()"><a  ng-click="jobCtrl.toggleEdit()">Toggle Editing Mode</a> | </span><a href="/jobs">Back to job list</a></div>
+      <div class="pull-right"><span ng-show="jobCtrl.isReadOnly()"><a href="" ng-click="jobCtrl.toggleEdit()">Enter Editing Mode</a> | </span><a href="/jobs">Back to job list</a></div>
     </div>
     <div class="panel-body">
       <div class="success" ng-show="jobCtrl.isSuccess()">You have successfully updated this job.<br /><br /></div>
