--- a/client/app/schedule/schedule.html
+++ b/client/app/schedule/schedule.html
@@ -1,10 +1,18 @@
 <div class="panel panel-default schedule-container">
-  <div class="panel-heading">Master schedule:
+  <div class="panel-heading">Master Schedule:
   </div>
     <ul class="list-group">
-      <li class="list-group-item clearfix" ng-repeat="time in scheduleCtrl.data.times | orderBy: 'time'">
-        <div class="col-xs-6">{{ time }} </div>
-        <div class="col-xs-6">{{ time.job1 }}</div>
+      <li class="list-group-item list-group-item-information clearfix">
+        <div class="col-xs-2">Time</div>
+        <div class="col" style="float: left; width: {{ scheduleCtrl.width }}" ng-repeat="job in scheduleCtrl.jobs">
+          {{ job.title }}
+        </div>
+      </li>
+      <li class="list-group-item clearfix" ng-init="data = scheduleCtrl.getRow(time)" ng-repeat="time in scheduleCtrl.times | orderBy: ''">
+        <div class="col-xs-2">{{ scheduleCtrl.parseTime(time) }} </div>
+        <div class="col" style="float: left; width: {{ scheduleCtrl.width }}" ng-repeat="job in scheduleCtrl.jobs">
+          {{ scheduleCtrl.displaySlot(job._id, data["slots"]) }}
+        </div>
       </li>
     </ul>
 </div>
