--- a/client/app/schedule/schedule.html
+++ b/client/app/schedule/schedule.html
@@ -11,7 +11,7 @@
       <li class="list-group-item clearfix" ng-init="data = scheduleCtrl.getRow(time)" ng-repeat="time in scheduleCtrl.times | orderBy: ''">
         <div class="col-xs-2">{{ scheduleCtrl.parseTime(time) }} </div>
         <div class="col" style="float: left; width: {{ scheduleCtrl.width }}" ng-repeat="job in scheduleCtrl.jobs">
-          {{ scheduleCtrl.displaySlot(job._id, data["slots"]) }}
+          {{ scheduleCtrl.cleanNames(scheduleCtrl.displaySlot(job._id, data["slots"])) }}
         </div>
       </li>
     </ul>
