--- a/client/app/volunteer/volunteer.html
+++ b/client/app/volunteer/volunteer.html
@@ -1,10 +1,10 @@
-<div class="panel panel-default volunteer-container" xmlns="http://www.w3.org/1999/html">
+<div ng-show="volunteerCtrl.areThereVolunteers()"><div class="panel panel-default volunteer-container">
   <div class="panel-heading">Search for a specific volunteer:</div>
   <div class="panel-body text-center">
     <input type="search" ng-model="search.firstName" placeholder="filter volunteer by first name" aria-label="filter volunteer" class="filtering"/>
     <input type="search" ng-model="search.lastName" placeholder="filter volunteer by last name" aria-label="filter volunteer" class="filtering" />
   </div>
-</div><br />
+</div><br /></div>
 <div class="panel panel-default volunteer-container">
   <div class="panel-heading">List of all volunteers:
     <div class="pull-right"><a href="/volunteers/create">Add a volunteer</a></div>
@@ -16,4 +16,4 @@
     </div>
   </div>
   <div class="panel-body" ng-hide="volunteerCtrl.areThereVolunteers()">There are currently no entered volunteers.</div>
-  </div>
+</div>
