--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -8,7 +8,8 @@
         <strong>Job title</strong>: {{ slotCtrl.getJobTitle(slot.jobID) }} <br />
         <strong>Start time</strong>: {{ slotCtrl.parseTime(slot.start) }} <br />
         <strong>End time</strong>: {{ slotCtrl.parseTime(slot.end) }} <br />
-        <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
+        <strong>Volunteers needed for slot</strong>: {{ slot.volunteersNeeded }} <br />
+        <strong>Volunteers still neeeded</strong>: {{ slot.left }} <br />
       </a>
       <a ng-click="slotCtrl.removeSlot(slot)" ng-href="" class="btn btn-sm btn-danger group-item-remove"><span class="glyphicon glyphicon-trash"></span></a>
     </div>
