Removing main controller details and updating messages for master schedule page

--- a/client/app/schedule/schedule.html
+++ b/client/app/schedule/schedule.html
@@ -15,5 +15,5 @@
         </div>
       </li>
     </ul>
-  <div class="panel-body" ng-hide="scheduleCtrl.areThereJobs()">In order to show a schedule, enter at least one job.</div>
+  <div class="panel-body" ng-hide="scheduleCtrl.areThereJobs()">In order to view the master schedule, please enter at least one job.</div>
 </div>
