Starting schedule builder functionality

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
       <!-- injector:css -->
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/builder/builder.css">
       <link rel="stylesheet" href="app/job/job.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/schedule/schedule.css">
@@ -81,11 +82,13 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/upload/upload.controller.js"></script>
+      <script src="app/upload/papaparse.min.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/builder/builder.controller.js"></script>
+      <script src="app/builder/builder.js"></script>
       <script src="app/file/file.directive.js"></script>
       <script src="app/job/Job.service.js"></script>
       <script src="app/job/job.controller.js"></script>
@@ -99,8 +102,8 @@
       <script src="app/slot/slot.js"></script>
       <script src="app/upload/Upload.service.js"></script>
       <script src="app/upload/papaparse.js"></script>
-      <script src="app/upload/papaparse.min.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/upload/upload.controller.js"></script>
       <script src="app/upload/upload.js"></script>
       <script src="app/viewer/viewer.controller.js"></script>
       <script src="app/viewer/viewer.js"></script>
