--- a/client/app/job/job-detail.html
+++ b/client/app/job/job-detail.html
@@ -23,7 +23,7 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">Time slots for this job:
-      <div class="pull-right"><a href="/slots/create">Create a time slot</a></div>
+      <div class="pull-right"><a href="/slots/create/{{jobCtrl.job._id}}">Create a time slot</a></div>
     </div>
     <div class="list-group">
       <div class="list-group-item no-padding" ng-repeat="slot in jobCtrl.slots">
