adding section showing volunteers who would prefer job at top of drop down

--- a/client/app/slot/slot-detail.html
+++ b/client/app/slot/slot-detail.html
@@ -32,6 +32,9 @@
         <div class="form-group">
           <label for="volunteer">Pick a volunteer</label><br />
           <select id="volunteer" name="volunteer" ng-model="slotCtrl.volunteer" required>
+            <option class="dropdown-header" disabled>Volunteers that prefer this job:</option>
+            <option ng-repeat="vol in slotCtrl.volunteers | filter: slotCtrl.getJobTitle(slotCtrl.slot.jobID) | orderBy: 'lastName'" value="{{ vol._id }}" >{{ vol.firstName }} {{ vol.lastName }}</option>
+            <option class="dropdown-header" disabled>All volunteers:</option>
             <option ng-repeat="vol in slotCtrl.volunteers | orderBy: 'lastName'" value="{{ vol._id }}" >{{ vol.firstName }} {{ vol.lastName }}</option>
           </select>
         </div>
